@startuml

title __CALCULATOR's Class Diagram__\n


  namespace Calculator {
    class Calculator.ButtonGrid {
        - buttonArray : JButton[][]
        - output : PrintStream
        + ButtonGrid()
        - numberButtons()
        - operationButtons()
        - setUpButtons()
    }
  }
  

  namespace Calculator {
    class Calculator.Calculator {
        - output : PrintStream
        + Calculator()
        + getOutput()
        {static} + main()
        + setOutput()
        - setUp()
        - setUpClearButton()
        - setUpTextArea()
    }
  }
  

  namespace Calculator {
    class Calculator.Operations_V1 {
        - calc : ArrayList<String>
        - punctuated : boolean
        - result : double
        - tempRes : double
        - textArea : JTextArea
        + Operations()
        + Operations()
        + add()
        + div()
        + evaluate()
        + getCalc()
        + getMultDiv()
        + getResult()
        + hardClear()
        + mult()
        + parseCalc()
        + setResult()
        + softClear()
        + sub()
        - addNextStep()
        - additions()
        - append()
        - appendNumber()
        - beginMult()
        - calculate()
        - calculateOffset()
        - checkForBrackets()
        - checkForPunctuation()
        - getMultDivGroups()
        - multiplications()
        - pickOperation()
        - punctuated()
        - replaceResult()
        - selectStrings()
        - setBracketsForMult()
        - setFirstBracket()
        - setLastResultAsFirstVariable()
        - setNegative()
    }
  }
  

  namespace Calculator {
    class Calculator.TextOutputStream {
        - textArea : JTextArea
        + TextOutputStream()
        + write()
    }
  }
  

  Calculator.Button -up-|> javax.swing.JButton
  Calculator.Button o-- Calculator.Operations_V1 : op
  Calculator.ButtonGrid -up-|> javax.swing.JPanel
  Calculator.ButtonGrid o-- Calculator.Operations_V1 : op
  Calculator.Calculator -up-|> javax.swing.JFrame
  Calculator.Calculator o-- Calculator.Operations_V1 : op
  Calculator.TextOutputStream -up-|> java.io.OutputStream


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
